--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           src="./images/logo-black.svg"
           alt="Картинка логотипа Оно тебе надо"
       /></a>
-      <address class="address">
+      <address class="address header__address">
         <ul class="header__address_no_bullit">
           <li>
             <a class="header__link" href="tel:+99995555555">+9 999 555 5555</a>
@@ -62,10 +62,10 @@
         </h1>
 
         <div class="cover__description">
-          <span class="cover__description-text"
-            >Аукцион вещей, в которые никто не верил</span
+          <p class="cover__description-text"
+            >Аукцион вещей, в которые никто не верил</p
           >
-          <span class="bet-button"><a href="#">Сделать ставку</a></span>
+          <button class="bet-button"><a href="#">Сделать ставку</a></button>
         </div>
       </section>
 
@@ -164,7 +164,7 @@
     </main>
 
     <footer class="footer">
-      <address class="address_footer">
+      <address class="address footer__address">
         <ul class="header__address_no_bullit">
           <li>
             <a class="header__link" href="tel:+99995555555">+9 999 555 5555</a>
