--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
             <a class="header__link" href="tel:+99995555555">+9 999 555 5555</a>
           </li>
           <li>
-            <a class="header__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+            <a class="header__link" href="mailto:info@sobaka.ge"
+              >info@sobaka.ge</a
+            >
           </li>
           <li>наб. Принсенграхт 263-<br />265, Амстердам</li>
         </ul>
@@ -62,10 +64,10 @@
         </h1>
 
         <div class="cover__description">
-          <p class="cover__description-text"
-            >Аукцион вещей, в которые никто не верил</p
-          >
-          <button class="bet-button"><a href="#">Сделать ставку</a></button>
+          <p class="cover__description-text">
+            Аукцион вещей, в которые никто не верил
+          </p>
+          <button class="bet-button">Сделать ставку</button>
         </div>
       </section>
 
@@ -170,7 +172,9 @@
             <a class="header__link" href="tel:+99995555555">+9 999 555 5555</a>
           </li>
           <li>
-            <a class="header__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+            <a class="header__link" href="mailto:info@sobaka.ge"
+              >info@sobaka.ge</a
+            >
           </li>
           <li>наб. Принсенграхт 263-<br />265, Амстердам</li>
         </ul>
