--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
       <nav class="header__menu">
         <ul class="header__links-list">
-          <li class="header__links-list-item header__links-list-item_no-bullit">
+          <li class="header__links-list-item">
             <a class="header__link header__link_active" href="#">главная</a>
           </li>
 
@@ -34,17 +34,11 @@
           alt="Картинка логотипа Оно тебе надо"
       /></a>
       <address class="address header__address">
-        <ul class="header__address_no_bullit">
-          <li>
-            <a class="header__link" href="tel:+99995555555">+9 999 555 5555</a>
-          </li>
-          <li>
-            <a class="header__link" href="mailto:info@sobaka.ge"
-              >info@sobaka.ge</a
-            >
-          </li>
-          <li>наб. Принсенграхт 263-<br />265, Амстердам</li>
-        </ul>
+        <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a>
+
+        <a class="address__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+
+        <p>наб. Принсенграхт 263-<br />265, Амстердам</p>
       </address>
     </header>
 
@@ -67,7 +61,7 @@
           <p class="cover__description-text">
             Аукцион вещей, в которые никто не верил
           </p>
-          <button class="bet-button">Сделать ставку</button>
+          <button class="bet-button" type="button">Сделать ставку</button>
         </div>
       </section>
 
@@ -166,34 +160,28 @@
     </main>
 
     <footer class="footer">
-      <address class="address footer__address">
-        <ul class="header__address_no_bullit">
-          <li>
-            <a class="header__link" href="tel:+99995555555">+9 999 555 5555</a>
-          </li>
-          <li>
-            <a class="header__link" href="mailto:info@sobaka.ge"
-              >info@sobaka.ge</a
-            >
-          </li>
-          <li>наб. Принсенграхт 263-<br />265, Амстердам</li>
-        </ul>
+      <address class="address">
+        <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a>
+
+        <a class="address__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+
+        <p>наб. Принсенграхт 263-<br />265, Амстердам</p>
       </address>
 
       <nav class="footer__menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link footer__menu-link_active" href="#"
+            <a class="footer__link footer__menu-link_active" href="#"
               >главная</a
             >
           </li>
 
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link" href="#">посмотреть лоты</a>
+            <a class="footer__link" href="#">посмотреть лоты</a>
           </li>
 
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link" href="#">об аукционе</a>
+            <a class="footer__link" href="#">об аукционе</a>
           </li>
         </ul>
       </nav>
